# 517Group_bot

./: .gitignore  README.md  bot.py  config.py  qqbot.bat
go-cphttp/: config.yml  device.json
go-cphttp/data/images/: LOG
go-cphttp/data/leveldb-v3/: LOG
go-cphttp/data/videos/: LOG
nonebot/: pyproject.toml
nonebot/qqbot/plugins/jielongfudu/: __init__.py
nonebot/qqbot/plugins/waifu/: __init__.py
qqbot/: .env.prod  daily_results.json  pyproject.toml
qqbot/data/: jile.json  waifu.json
qqbot/data/bottle/: permissionsList.json
qqbot/qqbot/plugins/call/: __init__.py
qqbot/qqbot/plugins/help/: __init__.py
qqbot/qqbot/plugins/jielongfudu/: __init__.py
qqbot/qqbot/plugins/jile/: __init__.py
qqbot/qqbot/plugins/logger/: __init__.py
qqbot/qqbot/plugins/mobai/: __init__.py
qqbot/qqbot/plugins/momo/: __init__.py
qqbot/qqbot/plugins/waifu/: __init__.py
qqbot/qqbot/plugins/zao/: __init__.py
