[project]
name = "qqbot"
version = "0.1.0"
description = "qqbot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_alias", "nonebot_plugin_cloudsignx", "nonebot_plugin_code", "nonebot_plugin_emojimix", "nonebot_plugin_BR", "nonebot_plugin_repesix", "nonebot_plugin_today_waifu"]
plugin_dirs = ["qqbot/plugins"]
builtin_plugins = ["echo"]
